# Raytraced-Animations

./: CMakeLists.txt  README.md  butterflyGen.py  compile  frameList.txt  genScene.py  render.sh  renderWindows.sh
Scenes/: 1.json  2.json  3.json  4.json  5.jso  6.json  mesh.jso  mesh.json
animation/: 00002.j  00002.json  00003.j  00004.j  00005.j  00006.j  00007.j  00008.j  00009.j  00010.j  00011.j  00012.j  00013.j  00014.j  00015.j  00016.j  00017.j  00018.j  00019.j  00020.j  00021.j  00022.j  00023.j  00024.j  00025.j  00026.j  00027.j  00028.j  00029.j  00030.j  00031.j  00032.j  00033.j  00034.j  00035.j  00036.j  00037.j  00038.j  00039.j  00040.j  (+19 more)
src/: hit.h  image.cpp  image.h  light.h  main.cpp  material.h  object.h  objloader.cpp  objloader.h  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  triple.cpp  triple.h  vertex.h
src/json/: json.h  json_fwd.h
src/shapes/: mesh.cpp  mesh.h  quad.cpp  quad.h  solvers.cpp  solvers.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
